refactor: support x.com in code

--- a/packages/plugins/Pets/src/locales/ko-KR.json
+++ b/packages/plugins/Pets/src/locales/ko-KR.json
@@ -20,7 +20,7 @@
     "pets_dialog_menu_about": "정보",
     "plugin_pets_name": "Non-F 친구",
     "plugin_pets_description": "#NFT 무한한 가능성을 탐색합니다.",
-    "share_twitter": "@realMaskNetwork로 Non-Fungible Friend를 설정했습니다. 프로필을 방문하여 확인하십시오. mask.io 에서 Mask Network 확장을 설치하고 설정하십시오.\n #mask_io #nonfungiblefriends\nhttps://twitter.com/NonFFriend/status/1508791087149641731",
+    "share_twitter": "@realMaskNetwork로 Non-Fungible Friend를 설정했습니다. 프로필을 방문하여 확인하십시오. mask.io 에서 Mask Network 확장을 설치하고 설정하십시오.\n #mask_io #nonfungiblefriends\nhttps://x.com/NonFFriend/status/1508791087149641731",
     "pet_setting_tooltip$default": "사이드바에서 Mask 아이콘을 클릭하고 Non-F Friends 앱에 액세스하여 맞춤형 데스크탑 NFT 펫을 설정합니다.",
     "pet_setting_tooltip$punk": "CryptoPunk #6128입니다! 항해자 여러분, WEB3 미지의 바다에 오신 것을 환영합니다!"
 }
