--- a/packages/plugins/Pets/src/locales/zh-CN.json
+++ b/packages/plugins/Pets/src/locales/zh-CN.json
@@ -20,7 +20,7 @@
     "pets_dialog_menu_about": "关于我们",
     "plugin_pets_name": "小宠物",
     "plugin_pets_description": "探索 #NFT 的无限可能性。",
-    "share_twitter": "我刚用 @realMaskNetwork 的插件设置了 NFT 个人形象。欢迎去我的个人主页查看。从 mask.io 安装 Mask Network 插件尝试设置你的个人形象。\n#mask_io #nonfungiblefriends\u2028\u2028⚙ 设置流程参考：https://twitter.com/NonFFriend/status/1508791087149641731",
+    "share_twitter": "我刚用 @realMaskNetwork 的插件设置了 NFT 个人形象。欢迎去我的个人主页查看。从 mask.io 安装 Mask Network 插件尝试设置你的个人形象。\n#mask_io #nonfungiblefriends\u2028\u2028⚙ 设置流程参考：https://x.com/NonFFriend/status/1508791087149641731",
     "pet_setting_tooltip$default": "点击侧边栏中的 Mask 图标并访问 Non-F Friends 应用来配置您的个性化桌面NFT宠物。",
     "pet_setting_tooltip$punk": "我是CryptoPunk #6128！航行者，欢迎来到WEB3的未知水域！"
 }
