feat: update permission page

--- a/packages/mask/dashboard/locales/en-US.json
+++ b/packages/mask/dashboard/locales/en-US.json
@@ -438,6 +438,7 @@
     "recovery_smart_pay_wallet_description_other": "{{count}} local SmartPay wallets have been detected and successfully recovered.",
     "welcome_request_to_collect": "Allow us to collect your usage information to help us make improvements.",
     "welcome_to_use_mask_network": "Welcome to use Mask Network",
+    "update_authorization_title": "Update X.com Authorization",
     "create_step": "Step {{step}}/{{totalSteps}}",
     "persona_create_title": "Create New Mask Identity",
     "persona_create_tips": "Create your persona to get started",
@@ -515,5 +516,6 @@
     "local_backup": "Local Backup",
     "incorrect_verification_code": "Invalid verification code.",
     "wallet_set_payment_password_successfully": "Set payment password successfully.",
-    "wallet_open_mask_wallet": "Open Mask Wallet"
+    "wallet_open_mask_wallet": "Open Mask Wallet",
+    "permission_onboarding": "We are pleased to inform you that the authorization update for X website has been successfully completed. You can now continue to enjoy all the features of Mask Network as usual. Thank you for your continuous support!"
 }
