--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -1023,6 +1023,9 @@
     "popups_settings_no_backup": "No back up",
     "popups_settings_backup_on": "Backup on {{time}}",
     "popups_settings_not_set": "Not set",
+    "popups_update_authorization_title": "Update X.com Authorization",
+    "popups_authorization_list": "Authorization List",
+    "popups_authorization_tips": "Because Twitter is now using the new domain name x.com, Mask Network requires users to grant new authorization in order to continue working on x.com.",
     "nft_wallet_label": "Wallet",
     "plugin_profile_no_wallets": "Connect your wallet here.<br/>This section will be shown to your encrypted friends.<br/>The display content includes digital art, donations, badges<br/>and other public information on chain.",
     "nft_input_address_label": "Please input contract address",
