docs(i18n): sync i18n files from Crowdin (#11660)

--- a/packages/mask/shared-ui/locales/zh-CN.json
+++ b/packages/mask/shared-ui/locales/zh-CN.json
@@ -2,7 +2,7 @@
     "promote": ":performancing_arts::performancing_arts::performancing_arts: 是否早已厌倦了纯文字信息？您可以尝试发送加密信息给朋友。安装Mask.io来发送您第一个加密推文吧。",
     "promote_red_packet": "亲爱的朋友，我刚刚创建了{{token}}红包。下载 Mask.io 来领取。",
     "promote_file_service": "📃📃📃 尝试在推特上使用永久的、去中心化的文件存储功能。安装 Mask.io 上传并分享你的第一份永久的去中心化存储文件，由主流去中心化存储方案提供技术支持。",
-    "promote_savings": "Hi朋友们，我刚刚在 {{chain}} 上质押了 {{amount}} {{symbol}} 。关注@{{account}} 来查找更多的质押项目。",
+    "promote_savings": "Hi朋友们，我刚刚在 {{chain}} 上质押了 {{- amount}} {{symbol}} 。关注@{{account}} 来查找更多的质押项目。",
     "promote_withdraw": "Hi朋友们，我刚刚在 {{chain}} 上质押了 {{- amount}} {{symbol}} 。关注@{{account}} 来查找更多的质押项目。",
     "promote_collectible": "在社交媒体上展示收藏品在 OpenSea 等多个平台上的具体信息，和提供报价及竞标功能。请安装 Mask.io 来尝试直接在 Twitter 上浏览NFT。",
     "promote_snapshot": "是否想积极地参与提案并推动项目进展？安装 Mask.io ，直接在 Twitter 上为提案进行投票。",
@@ -271,6 +271,7 @@
     "export": "导出",
     "confirm_swap_risk": "确认兑换风险",
     "wallet_load_retry": "加载 {{symbol}} 失败，请点击重试。",
+    "name": "名称",
     "wallet_rename": "重新命名钱包",
     "wallet_loading_nft_contract": "正在加载 NFT 合约...",
     "wallet_search_contract_no_result": "没有结果或合同地址不符合查询标准。",
@@ -416,7 +417,7 @@
     "plugin_red_packet_claim": "认领",
     "plugin_red_packet_claim_title": "认领红包",
     "plugin_red_packet_claim_notification": "认领一个红包",
-    "plugin_red_packet_claim_success": "成功认领 {{tokenAmountDescription}} 红包。",
+    "plugin_red_packet_claim_success": "成功认领 {{- tokenAmountDescription}} 红包。",
     "plugin_red_packet_claim_success_without_detail": "认领红包成功。",
     "plugin_red_packet_claim_fail": "认领红包失败",
     "plugin_red_packet_create_with_token": "创建您的红包。",
@@ -576,7 +577,7 @@
     "plugin_infra_descriptor_token_transfer_title": "发送代币",
     "plugin_infra_descriptor_token_transfer": "发送 {{symbol}} 小费给您的好友 。",
     "plugin_infra_descriptor_token_transfer_fail": "发送 Token 失败。",
-    "plugin_infra_descriptor_token_transfer_success": "成功发送 {{tokenAmountDescription}} 小费给您的好友 。",
+    "plugin_infra_descriptor_token_transfer_success": "成功发送 {{- tokenAmountDescription}} 小费给您的好友 。",
     "plugin_infra_descriptor_token_revoke_title": "撤销代币授权",
     "plugin_infra_descriptor_token_revoke_success": "撤销授权成功。",
     "plugin_infra_descriptor_token_revoke_fail": "撤销代币授权失败。",
@@ -588,14 +589,14 @@
     "plugin_infra_descriptor_token_fail": "解锁代币合约失败。",
     "plugin_infra_descriptor_token_deposit_title": "存入代币",
     "plugin_infra_descriptor_token_deposit": "存款 {{tokenAmountDescription}} 。",
-    "plugin_infra_descriptor_token_deposit_success": "存款 {{tokenAmountDescription}} 成功。",
+    "plugin_infra_descriptor_token_deposit_success": "存款 {{- tokenAmountDescription}} 成功。",
     "plugin_infra_descriptor_token_deposit_fail": "存款失败 {{symbol}}。",
     "plugin_infra_descriptor_token_withdraw_title": "提取 Token",
     "plugin_infra_descriptor_token_withdraw": "提取 {{tokenAmountDescription}} 。",
-    "plugin_infra_descriptor_token_withdraw_success": "提取 {{tokenAmountDescription}} 成功。",
+    "plugin_infra_descriptor_token_withdraw_success": "提取 {{- tokenAmountDescription}} 成功。",
     "plugin_infra_descriptor_token_withdraw_fail": "提取 {{symbol}} 失败。",
     "plugin_infra_descriptor_mask_box_purchase_title": "购买Maskbox NFT",
-    "plugin_infra_descriptor_mask_box_purchase_success": "使用 {{tokenAmountDescription}} 成功购买Maskbox NFT。",
+    "plugin_infra_descriptor_mask_box_purchase_success": "使用 {{- tokenAmountDescription}} 成功购买Maskbox NFT。",
     "plugin_infra_descriptor_mask_box_purchase": "购买Maskbox NFT。",
     "plugin_infra_descriptor_mask_box_purchase_fail": "购买Maskbox NFT失败。",
     "plugin_infra_descriptor_gitcoin_donate_title": "捐赠",
@@ -727,6 +728,7 @@
     "popups_wallet_settings_auto_lock_number_only": "此字段必须是数字。",
     "popups_wallet_settings_current_management_account": "当前的管理账户",
     "popups_wallet_settings_local_persona_or_wallet_only": "仅限本地身份或钱包",
+    "popups_wallet_settings_hiding_scam_transactions": "隐藏Scam 交易",
     "popups_wallet_connected_sites": "已连接的网站",
     "popups_wallet_connected_sites_description": "钱包已连接到这些站点，它们可以查看您的帐户地址。",
     "popups_wallet_disconnect_confirm": "您确定要断开连接吗？您可能会失去网站功能。",
@@ -945,6 +947,7 @@
     "popups_set_avatar_failed": "加载头像失败。",
     "popups_wallet_request_source": "请求源",
     "popups_wallet_sign_message": "消息签名",
+    "popups_wallet_sign_raw_message": "签名消息 (十六进制)",
     "popups_wallet_unlock_erc20_title": "给予权限来访问 <br /> 您的{{symbol}}？",
     "popups_wallet_unlock_erc20_tips": "通过授予权限，您正在允许以下 <br /> 合约来获取您的资金",
     "popups_wallet_unlock_erc20_placeholder": "输入最大支出限额",
