docs(i18n): sync i18n files from Crowdin (#11663)

--- a/packages/mask/shared-ui/locales/ja-JP.json
+++ b/packages/mask/shared-ui/locales/ja-JP.json
@@ -12,6 +12,9 @@
     "debug_new_bug_issue": "新たなバグ問題",
     "debug_metadata_title": "新しいメタデータを追加または既存のメタデータを置き換え",
     "debug_metadata_put_metadata": "メタデータを追加",
+    "token": "トークン",
+    "token_address": "トークンのアドレス",
+    "token_value": "トークンの価値",
     "edit": "編集",
     "clear": "消去",
     "connect": "接続",
@@ -292,6 +295,7 @@
     "wallet_transfer_receiving_account": "受取アカウント",
     "wallet_transfer_to_address": "宛先のアドレス",
     "wallet_transfer_send": "送る",
+    "wallet_transfer_deploy": "コントラクトのデプロイ",
     "wallet_transfer_placeholder": "Ens または Address(0x)",
     "wallet_transfer_title": "転送",
     "wallet_transfer_my_wallets_title": "私のウォレット",
@@ -819,6 +823,8 @@
     "popups_wallet_gas_fee_settings_custom": "カスタム",
     "popups_wallet_gas_fee": "ガス料金",
     "popups_wallet_gas_price_too_low": "ガス価格が低すぎるため、取引が失敗します",
+    "popups_wallet_gas_limit_too_high": "ガス限界は {{gas}} より小さくなければなりません。",
+    "popups_wallet_gas_limit_too_low": "ガス限界は {{gas}}より大きくなければなりません。",
     "popups_wallet_priority_fee_is_zero": "優先料金は0より大きくなければなりません。 ",
     "popups_wallet_priority_fee_is_too_high": "最大優先料金がネットワーク状況に対して高すぎます。",
     "popups_wallet_priority_fee_is_too_low": "最大優先料金がネットワーク状況に対して低すぎます。",
@@ -946,8 +952,28 @@
     "popups_set_avatar_successfully": "アバターを設定しました",
     "popups_set_avatar_failed": "アバターを設定できませんでした。",
     "popups_wallet_request_source": "リクエストソース",
+    "popups_wallet_request_source_insecure": "このサイトへの接続は暗号化されていないため、敵対的な第三者によって変更されます。このリクエストを拒否することを強くお勧めします。",
     "popups_wallet_sign_message": "署名メッセージ",
     "popups_wallet_sign_raw_message": "メッセージ署名（Hex）",
+    "popups_wallet_sign_in_message": "サインインリクエスト",
+    "popups_wallet_sign_in_message_invalid_eip4361": "このメッセージは無効なEIP-4361メッセージを含んでいます。このリクエストを拒否することをお勧めします。",
+    "popups_wallet_sign_in_message_domain": "ドメイン",
+    "popups_wallet_sign_in_message_issued_at": "発行元",
+    "popups_wallet_sign_in_message_not_before": "リクエストは以前には有効ではありません",
+    "popups_wallet_sign_in_message_not_after": "リクエストは以後には有効ではありません",
+    "popups_wallet_sign_in_message_request_id": "リクエストID",
+    "popups_wallet_sign_in_message_version": "バージョン",
+    "popups_wallet_sign_in_message_resource": "リソース",
+    "popups_wallet_sign_in_message_version_invalid": "不明なEIP-4361メッセージバージョンです。",
+    "popups_wallet_sign_in_message_domain_invalid": "ウェブサイト（{{- messageOrigin}}）が別のドメイン（{{- domain}}）へのサインインを要求しています。これはフィッシング攻撃の可能性があります。",
+    "popups_wallet_sign_in_message_chainID_invalid": "chainIDは現在接続されているものと等しくありません。",
+    "popups_wallet_sign_in_message_not_before_invalid": "このリクエストは、将来的にのみ署名する必要があります。",
+    "popups_wallet_sign_in_message_expiration_time_invalid": "このリクエストは期限切れです。",
+    "popups_wallet_sign_in_danger_confirm_title": "本当によろしいですか？",
+    "popups_wallet_sign_in_danger_confirm": "このリクエストはフィッシングの添付かもしれません。私はこれを理解し続けたいです。",
+    "popups_wallet_add_suggested_token": "提案されたトークンを追加",
+    "popups_wallet_add_suggested_token_warning": "注意してください。追加する前にトークンを確認してください。",
+    "popups_wallet_add_suggested_token_no_wellknown_name": "(名前はウェブサイトによって設定されます)",
     "popups_wallet_unlock_erc20_title": "<br /> あなたの{{symbol}}へのアクセス許可を与えますか？",
     "popups_wallet_unlock_erc20_tips": "許可を与えることにより、以下の <br /> 契約があなたの資金にアクセスすることを許可しています",
     "popups_wallet_unlock_erc20_placeholder": "最大支出上限を入力してください",
@@ -997,6 +1023,9 @@
     "popups_settings_no_backup": "バックアップはありません",
     "popups_settings_backup_on": "{{time}} でバックアップ",
     "popups_settings_not_set": "未設定",
+    "popups_update_authorization_title": "X.com 認証の更新",
+    "popups_authorization_list": "認証リスト",
+    "popups_authorization_tips": "Twitterは現在、新しいドメイン名x.comを使用しているため、マスクネットワークは、x.comで作業を続けるためにユーザーに新しい承認を与える必要があります。",
     "nft_wallet_label": "ウォレット",
     "plugin_profile_no_wallets": "ここにウォレットを接続してください。<br/>このセクションは暗号化された友達に表示されます。<br/>表示内容には、デジタルアート、寄付、バッジ<br/>その他チェーンに関する公開情報が含まれます。",
     "nft_input_address_label": "コントラクトアドレスを入力してください。",
@@ -1174,5 +1203,8 @@
     "hide_collectible": "{{-name}} を非表示",
     "hide_collectible_description": "{{- name}}を非表示にしますか？このNFTをいつでも再追加することで再表示できます。",
     "add_new_address_to_an_existing_group": "既存のグループに新しいアドレスを追加",
-    "or_create_a_new_wallet_group": "または新しいウォレットグループを作成"
+    "or_create_a_new_wallet_group": "または新しいウォレットグループを作成",
+    "wallet_sdk_connect_title": "マスクウォレットと接続",
+    "wallet_sdk_connect_subtitle": "このサイトで使用するウォレットを選択してください。信頼しないウェブサイトに接続しないでください。",
+    "wallet_sdk_connect_warning_title": "ウェブサイトはできます。"
 }
