fix(RedPacket): disable share for twitter on Firefly

--- a/packages/plugins/RedPacket/src/locales/en-US.json
+++ b/packages/plugins/RedPacket/src/locales/en-US.json
@@ -168,8 +168,10 @@
     "share_on_firefly$default": "🤑 Check this Lucky Drop  🧧💰✨ sent by @{{- sender }} .\n\nGrow your followers and engagement with Lucky Drop on Firefly mobile app or http://firefly.mask.social !\n\nClaim on: {{- link }}",
     "share_on_firefly$lens": "🤑 Check this Lucky Drop  🧧💰✨ sent by @{{- sender }} .\n\nGrow your followers and engagement with Lucky Drop on Firefly mobile app or http://firefly.mask.social !\n\nClaim on Lens: {{- link }}",
     "share_on_firefly$farcaster": "🤑 Check this Lucky Drop  🧧💰✨ sent by @{{- sender }} .\n\nGrow your followers and engagement with Lucky Drop on Firefly mobile app or http://firefly.mask.social !\n\nClaim on Farcaster: {{- link }}",
+    "share_on_firefly$twitter": "🤑 Check this Lucky Drop  🧧💰✨ sent by @{{- sender }} .\n\nGrow your followers and engagement with Lucky Drop on Firefly mobile app or http://firefly.mask.social !\n\nClaim on Twitter: {{- link }}",
     "share_on_firefly$lens_claimed": "🤑 Just claimed a #LuckyDrop  🧧💰✨ on https://firefly.mask.social from @{{- sender }} ! \n\nClaim on Lens: {{- link }}",
     "share_on_firefly$farcaster_claimed": "🤑 Just claimed a #LuckyDrop  🧧💰✨ on https://firefly.mask.social from @{{- sender }} ! \n\nClaim on Farcaster: {{- link }}",
+    "share_on_firefly$twitter_claimed": "🤑 Just claimed a #LuckyDrop  🧧💰✨ on https://firefly.mask.social from @{{- sender }} ! \n\nClaim on Twitter: {{- link }}",
     "no_claim_data": "No claims yet for this Lucky Drop",
     "no_claim_history_data": "No Lucky Drops claimed",
     "no_sent_history_data": "<div>No Lucky Drops created.</div> <div>Select 🎁 when you compose a post to start your first drop.<div>",
