--- a/packages/plugins/Collectible/src/locales/ja-JP.json
+++ b/packages/plugins/Collectible/src/locales/ja-JP.json
@@ -24,10 +24,56 @@
     "plugin_collectible_event": "イベント",
     "plugin_collectible_unit_price": "単価",
     "plugin_collectible_price": "価格",
+    "plugin_collectible_from": "から",
+    "plugin_collectible_to": "宛先",
+    "plugin_collectible_date": "日付",
+    "plugin_collectible_quantity": "量",
+    "plugin_collectible_expires_in": "有効期限：",
+    "plugin_collectible_expiration": "有効期限",
+    "plugin_collectible_no_listings": "リストがありません",
+    "plugin_collectible_base": "拠点",
+    "plugin_collectible_properties": "資産",
+    "plugin_collectible_about": "詳細",
+    "plugin_collectible_nft_offers_empty": "このNFTにはオファーはありませんでした。",
+    "plugin_collectible_nft_activity_empty": "このNFTにはアクティビティがありませんでした。",
+    "plugin_collectible_chain_info": "チェーン情報",
+    "plugin_collectible_creator_earning": "クリエイター・ロイヤリティ",
+    "plugin_collectible_creator_earning_tooltip": "このアイテムを販売すると、この金額が売却収益から取り出され、NFTの作成者にロイヤリティとして送られます。 コレクション所有者はロイヤリティを調整することができます。",
+    "plugin_collectible_platform_costs": "{{platform}} のプラットフォームコスト",
+    "plugin_collectible_contract_address": "コントラクトアドレス",
+    "plugin_collectible_token_id": "トークンID",
+    "plugin_collectible_mint_address": "ミントアドレス",
+    "plugin_collectible_block_chain": "ブロックチェーン",
+    "plugin_collectible_create_by": "作成者",
+    "plugin_collectible_owned_by": "所有者",
+    "plugin_collectible_view_on": "次のサイトで表示：",
+    "plugin_collectible_no_history": "履歴がありません。",
     "plugin_collectible_ensure_unreviewed_item": "未レビューのアイテムを確認してください",
     "plugin_collectible_check_tos_document": "ToS ドキュメントを確認してください",
     "plugin_collectible_insufficient_offer": "オファーが不足している",
     "plugin_collectible_not_been_reviewed_by_opensea": "このアイテムは OpenSea によってレビューされていません。",
+    "plugin_collectible_reviewed_tips": "注意して行動してください。ブロックチェーン上では、既存のアイテムの偽バージョンを含め、誰でも任意の名前でデジタルアイテムを作成することができます。このアイテムが本物であることを確認するため、このアイテムに触れる際には十分に注意、よく調べてください。",
+    "plugin_collectible_total": "合計",
+    "plugin_collectible_refresh": "再読み込み",
+    "plugin_collectible_failed_load": "{{source}} のコレクションの読み込みに失敗しました。",
+    "plugin_collectible_approved_tips": "このボックスをチェックすることで、このアイテムが OpenSea によってレビューまたは承認されていないことを認めます。",
+    "plugin_collectible_agree_terms": "このボックスをチェックすることで、OpenSea の<terms>利用規約</terms>に同意します。",
+    "plugin_collectible_convert_eth": "ETHを変換",
+    "plugin_collectible_sale_end": "セールは {{time}}で終了します",
+    "plugin_collectible_set_initial_price": "初期価格を設定する。",
+    "plugin_collectible_ending_price_tip": "このアイテムを移転またはキャンセルするまで販売されます。",
+    "plugin_collectible_starting_price": "開始価格",
+    "plugin_collectible_ending_price": "終了価格",
+    "plugin_collectible_ending_price_less_than_staring": "開始価格以下でなければならない。有効期限が切れるまで、価格はこの金額まで直線的に上昇します。",
+    "plugin_collectible_expiration_date": "有効期限",
+    "plugin_collectible_schedule_date": "予定日",
+    "plugin_collectible_auto_cancel_tip": "あなたのリスティングは自動的にこの時間で終了します。キャンセルする必要はありません！",
+    "plugin_collectible_schedule_future_date": "今後のスケジュールを設定。",
+    "plugin_collectible_buyer_address": "購入者のアドレス",
+    "plugin_collectible_buyer_address_placeholder": "買い手のアドレスを入力する。",
+    "plugin_collectible_buyer_address_helper_text": "買い手だけが購入することができます。",
+    "plugin_collectible_include_ending_price": "終了価格を含む",
+    "plugin_collectible_include_ending_price_helper": "終了価格を追加すると、このリスティングが失効したり、買い手が見つかるまで価格が引き下げられたりします。",
     "plugin_collectible_schedule_for_a_future_time": "今後のスケジュール設定",
     "plugin_collectible_schedule_for_a_future_time_helper": "このリストは、将来のデータでのみ購入できるようにスケジュールすることができます。",
     "plugin_collectible_privacy": "プライバシー",
