fix: fw-1508 update repost text for lens

--- a/packages/plugins/RedPacket/src/locales/en-US.json
+++ b/packages/plugins/RedPacket/src/locales/en-US.json
@@ -148,6 +148,9 @@
     "nft_holder": "NFT holder",
     "nft_holder_description": "Users must hold one NFT from the collection you select.",
     "repost": "Repost",
+    "repost$lens": "Mirror",
+    "repost$twitter": "Repost",
+    "repost$farcaster": "Repost",
     "like": "Like",
     "comment": "Comment",
     "clear_all_requirements": "Clear all requirements",
