--- a/packages/plugins/Calendar/src/locales/zh-CN.json
+++ b/packages/plugins/Calendar/src/locales/zh-CN.json
@@ -8,7 +8,7 @@
     "loading": "加载中",
     "powered_by": "技术支持",
     "news": "新闻",
-    "event": "事件",
+    "event": "活动",
     "nfts": "NFTs",
     "content_end": "内容已全部加载",
     "expired": "已过期"
