fixup! refactor: remove some more unused files

--- a/packages/shared/src/locales/zh-CN.json
+++ b/packages/shared/src/locales/zh-CN.json
@@ -7,9 +7,6 @@
     "approve_mask_description": "MATIC 代币用于支付与 Polygon Network 交互时支付的网络费用。 SmartPay 钱包允许用户在与 Polygon Network 网络交互时使用 MASK 代币。",
     "approve_mask_question": "您想设置 MASK 代币用于支付网络费吗?",
     "authorization_descriptions": "Mask Network 需要您在使用前授权以下网站。",
-    "create_persona_hint": "使用此功能需要先创建一个身份并验证您的社交媒体账号。",
-    "create_persona_title": "身份",
-    "create_persona_action": "创建身份",
     "congratulations": "恭喜！",
     "coming_soon": "即将上线",
     "domain_request": "域名请求",
@@ -24,7 +21,6 @@
     "wallet_balance": "余额",
     "wallet_balance_eth": "余额 ({{symbol}})",
     "balance": "余额",
-    "web3_profile_card_name": "Web3 名片",
     "profile_card_name": "Web3 名片",
     "unlock": "解锁",
     "select_token": "选择代币",
@@ -56,7 +52,6 @@
     "mask_network": "Mask Network",
     "search": "搜索",
     "check_security": "安全检查",
-    "search_input_placeholder": "请输入合约地址.",
     "token_info": "代币信息",
     "more_details": "更多详情",
     "more": "更多",
@@ -171,28 +166,15 @@
     "account_icon_tooltips_only$facebook": "数据来源于 Facebook 个人资料 。",
     "account_icon_tooltips$next_id": "数据来源于 NEXT.ID 。",
     "account_icon_tooltips_only$next_id": "数据来源于 NEXT.ID 。",
-    "wallet_status_button_copy_address": "复制地址",
     "copy_success_of_wallet_addr": "复制钱包地址成功！",
-    "persona_boundary_create_persona": "创建身份",
-    "persona_boundary_connect_persona": "连接身份",
-    "persona_boundary_verify_persona": "验证您的Twitter ID",
-    "applications_create_persona_title": "身份",
-    "applications_create_persona_hint": "使用此功能需要先创建一个身份并验证您的社交媒体账号。",
-    "applications_create_persona_action": "创建身份",
-    "lens_follow": "关注",
-    "lens_following": "已关注",
     "view": "查看",
     "verified_by": "由 {{ marketplace }} 验证",
     "no_NFTs_found": "没有找到任何NFT。",
     "add_collectibles": "添加 NFT",
-    "collectible_contract_require": "NFT 地址为必填项",
-    "collectible_contract_invalid": "合约地址不正确",
     "collectible_token_id_require": "NFT id 为必填项",
     "collectible_token_id_invalid": "不正确的 NFT id",
     "collection_not_belong_to_you": "合约地址不正确或此 NFT 不属于您。",
     "collectible_search_placeholder": "名称或合同地址 eg.PUNK 或 0x234...",
-    "add_collectibles_address_placeholder": "输入合约地址",
-    "add_collectibles_token_id_placeholder": "Token ID 用逗号分隔，例如：1223,1224,",
     "plugin_wallet_solana_tips": "Phantom 只支持Solana 链。",
     "plugin_wallet_blocto_tips": "Blocto 只支持 Flow 链。",
     "plugin_wallet_fortmatic_tips": "Formatic 仅支持 ETH 和 BNB 链。",
@@ -258,7 +240,6 @@
     "enable_plugin_boundary_description": "此功能已在应用设置中被关闭。启用插件以完全访问。",
     "usdc_price_statistic": "价格统计数据",
     "market_cap": "市值",
-    "trader_circulating_supply": "流通总量",
     "volume_24": "24h 交易总额",
     "total_supply": "总供应量",
     "circulating_supply": "流通总量",
@@ -269,20 +250,14 @@
     "show_wallet_setting_intro": "请选择钱包以在保存设置后激活功能。",
     "show_wallet_setting_button": "前往设置",
     "web3_profile_no_social_address_list": "找不到有效的用户地址数据源。",
-    "badge_renderer_provided_by_plugin": "插件提供：",
     "post_dialog__button": "加密",
     "post_dialog__placeholder": "告诉朋友发生了什么...",
     "post_dialog__title": "加密贴文",
-    "post_dialog_visible_to": "可见范围",
-    "post_dialog_encryption_method": "加密方式",
     "post_dialog_enable_paste_auto": "启用自动粘贴",
     "post_dialog_share_with_input_placeholder": "例如：Twitter账户、身份公钥、钱包地址或者ENS",
     "plugins": "插件",
-    "persona_required": "必须拥有身份",
     "create": "创建",
     "connect": "连接",
     "reset": "重置",
-    "editor": "编辑器",
-    "typed_message_text_alert": "当前只支持输入消息文本。",
-    "share_to_social_networks": "分享到社交网络"
+    "editor": "编辑器"
 }
