chore: add some https

--- a/packages/plugins/RedPacket/src/locales/ja-JP.json
+++ b/packages/plugins/RedPacket/src/locales/ja-JP.json
@@ -164,9 +164,9 @@
     "requirements": "必要条件",
     "follow_somebody_on_somewhere": " {{ platform }}で <span>{{handles}}</span> をフォローする",
     "nft_holder_of": "<nfts>{{- names }}</nfts> のNFT ホルダー",
-    "share_on_firefly$default": "🤑 このラッキードロップをチェック  🧧💰✨ 送信者 @{{- sender }} .\n\nFireflyモバイルアプリまたは http://firefly.mask.social !のラッキードロップでフォロワーとエンゲージメントを増やしましょう！\n\nLensで獲得： {{- link }}",
-    "share_on_firefly$lens": "🤑 このラッキードロップをチェック  🧧💰✨ 送信者 @{{- sender }} .\n\nFireflyモバイルアプリまたは http://firefly.mask.social !のラッキードロップでフォロワーとエンゲージメントを増やしましょう！\n\nLensで獲得： {{- link }}",
-    "share_on_firefly$farcaster": "🤑 このラッキードロップをチェック  🧧💰✨ 送信者 @{{- sender }} .\n\nFireflyモバイルアプリまたは http://firefly.mask.social !のラッキードロップでフォロワーとエンゲージメントを増やしましょう！\n\nFarcasterで獲得： {{- link }}",
+    "share_on_firefly$default": "🤑 このラッキードロップをチェック  🧧💰✨ 送信者 @{{- sender }} .\n\nFireflyモバイルアプリまたは https://firefly.mask.social !のラッキードロップでフォロワーとエンゲージメントを増やしましょう！\n\nLensで獲得： {{- link }}",
+    "share_on_firefly$lens": "🤑 このラッキードロップをチェック  🧧💰✨ 送信者 @{{- sender }} .\n\nFireflyモバイルアプリまたは https://firefly.mask.social !のラッキードロップでフォロワーとエンゲージメントを増やしましょう！\n\nLensで獲得： {{- link }}",
+    "share_on_firefly$farcaster": "🤑 このラッキードロップをチェック  🧧💰✨ 送信者 @{{- sender }} .\n\nFireflyモバイルアプリまたは https://firefly.mask.social !のラッキードロップでフォロワーとエンゲージメントを増やしましょう！\n\nFarcasterで獲得： {{- link }}",
     "share_on_firefly$lens_claimed": "https://firefly.mask.social に @{{- 送信者}} ! 🤑 からラッキードロップ 🧧💰✨が届きました。\n\nLensで獲得: {{- link }}",
     "share_on_firefly$farcaster_claimed": "https://firefly.mask.social に @{{- 送信者}} ! 🤑 からラッキードロップ 🧧💰✨が届きました。\n\nFarcasterで獲得: {{- link }}",
     "no_claim_data": "このラッキードロップの請求はまだありません。",
