fix: bugfix for gitcoin

--- a/packages/plugins/Gitcoin/src/locales/en-US.json
+++ b/packages/plugins/Gitcoin/src/locales/en-US.json
@@ -39,5 +39,6 @@
     "rounds": "Rounds",
     "project_details": "Project details",
     "past_rounds": "Past rounds",
-    "about": "Abount"
+    "about": "Abount",
+    "no_past_rounds_found": "No past rounds found."
 }
