--- a/packages/plugins/Savings/src/locales/en-US.json
+++ b/packages/plugins/Savings/src/locales/en-US.json
@@ -25,6 +25,6 @@
     "lido_exchange_rate": "Lido Exchange Rate",
     "waiting_time": "Wating time",
     "waiting_time_value": "{{ value }} days",
-    "lido_withdraw_tips": "To use Lido, you need to wait 1-5 days. Using other swap aggregators is faster, but the exchange rate is lower than 1:1.",
+    "lido_withdraw_tips": "To use Lido, you need to wait {{days}} days. Using other swap aggregators is faster, but the exchange rate is lower than 1:1.",
     "lido_withdraw_token": "Withdraw {{ symbol }}"
 }
