fix: bugfix for gitcoin

--- a/packages/plugins/Gitcoin/src/locales/en-US.json
+++ b/packages/plugins/Gitcoin/src/locales/en-US.json
@@ -36,9 +36,9 @@
     "funding_received": "funding received",
     "contributions": "contributions",
     "unique_contributors": "unique contributors",
-    "rounds": "Rounds",
+    "rounds": "rounds",
     "project_details": "Project details",
     "past_rounds": "Past rounds",
-    "about": "Abount",
+    "about": "About",
     "no_past_rounds_found": "No past rounds found."
 }
