--- a/packages/plugins/Savings/src/locales/en-US.json
+++ b/packages/plugins/Savings/src/locales/en-US.json
@@ -23,8 +23,9 @@
     "promote_savings": "Hi friends, I just deposit {{- amount}} {{symbol}} on {{chain}}. Follow @{{account}} to find more staking projects.",
     "promote_withdraw": "Hi friends, I just withdrew my deposit {{- amount}} {{symbol}} on {{chain}}. Follow @{{account}} to find more staking projects.",
     "lido_exchange_rate": "Lido Exchange Rate",
-    "waiting_time": "Wating time",
+    "waiting_time": "Waiting time",
     "waiting_time_value": "{{ value }} days",
     "lido_withdraw_tips": "To use Lido, you need to wait {{days}} days. Using other swap aggregators is faster, but the exchange rate is lower than 1:1.",
-    "lido_withdraw_token": "Withdraw {{ symbol }}"
+    "lido_withdraw_token": "Withdraw {{ symbol }}",
+    "minimum_tips": "Minimum withdraw amount is {{amount}} {{symbol}}"
 }
