--- a/packages/mask/shared-ui/locales/en-US.json
+++ b/packages/mask/shared-ui/locales/en-US.json
@@ -282,6 +282,7 @@
     "wallet_confirm_with_password": "Confirm with password",
     "wallet_airdrop_nft_unclaimed_title": "NFT Airdrop Unclaimed:",
     "view_on_explorer": "View on Explorer",
+    "view_on_web3_bio": "View on web3.bio",
     "recent_transaction_pending": "Pending",
     "recent_transaction_cancelled": "Cancelled",
     "wallet_balance": "Balance",
