feat: new exchange integrating okx

--- a/packages/plugins/Trader/src/locales/en-US.json
+++ b/packages/plugins/Trader/src/locales/en-US.json
@@ -137,5 +137,6 @@
     "powered_by": "Powered by",
     "available_balance": "Available Balance",
     "wallet_balance": "Balance",
-    "edit": "Edit"
+    "edit": "Edit",
+    "history": "History"
 }
