refactor: extra FeedActions

--- a/packages/plugins/RSS3/src/locales/en-US.json
+++ b/packages/plugins/RSS3/src/locales/en-US.json
@@ -71,7 +71,8 @@
     "category": "Category",
     "from": "From",
     "to": "To",
-    "action": "Action",
+    "actions_one": "Action",
+    "actions_other": "Actions",
     "asset": "Asset",
     "successful": "Successful",
     "failed": "Failed",
