fix: liquid card

--- a/packages/plugins/RSS3/src/locales/en-US.json
+++ b/packages/plugins/RSS3/src/locales/en-US.json
@@ -11,9 +11,9 @@
     "token_operation_verbose$burn": "$t(token_operation$burn)",
     "token_operation_verbose$deposit": "$t(token_operation$deposit)",
     "token_operation_verbose$withdraw": "$t(token_operation$withdraw)",
-    "token_staking$stake": "<bold>{{user}}</bold> staked <bold>{{symbol}}</bold>",
-    "token_staking$claim": "<bold>{{user}}</bold> claimed <bold>{{symbol}}</bold>",
-    "token_staking$unstake": "<bold>{{user}}</bold> unstaked <bold>{{symbol}}</bold>",
+    "token_staking$stake": "<user>{{user}}</user> staked <bold>{{symbol}}</bold>",
+    "token_staking$claim": "<user>{{user}}</user> claimed <bold>{{symbol}}</bold>",
+    "token_staking$unstake": "<user>{{user}}</user> unstaked <bold>{{symbol}}</bold>",
     "token_approval$approve": "<user>{{user}}</user> approved <asset>{{- amount}} {{symbol}}</asset> to <contract>{{contract}}</contract>",
     "token_approval$revoke": "<user>{{user}}</user> revoked the approval of <asset>{{- amount}} {{symbol}}</asset> to <contract>{{contract}}</contract>",
     "token_approval_verbose$revoke": "<bold>{{user}}</bold> revoked the approval of <bold>{{- amount}} {{symbol}}</bold>",
