--- a/packages/plugins/RSS3/src/locales/en-US.json
+++ b/packages/plugins/RSS3/src/locales/en-US.json
@@ -1,22 +1,22 @@
 {
-    "token_operation$mint": "<to>{{to}}</to> minted <bold>{{value}} {{symbol}}</bold>",
-    "token_operation$send": "<from>{{from}}</from> sent <asset>{{asset}}</asset> to <to>{{to}}</to>",
-    "token_operation$claim": "<to>{{to}}</to> claimed from <from>{{from}}</from>",
-    "token_operation$burn": "<from>{{from}}</from> burned <bold>{{value}} {{symbol}}</bold>",
-    "token_operation$deposit": "<from>{{from}}</from> deposited on <bold>{{exchange}}</bold>",
-    "token_operation$withdraw": "<from>{{from}}</from> withdrew on <bold>{{exchange}}</bold>",
-    "token_operation_verbose$mint": "$t(token_operation$mint)",
-    "token_operation_verbose$send": "<from>{{from}}</from> sent to <to>{{to}}</to> for <bold>{{value}} {{symbol}}</bold>",
-    "token_operation_verbose$claim": "<to>{{to}}</to> claimed from <from>{{from}}</from> for <bold>{{value}} {{symbol}}</bold>",
-    "token_operation_verbose$burn": "$t(token_operation$burn)",
-    "token_operation_verbose$deposit": "$t(token_operation$deposit)",
-    "token_operation_verbose$withdraw": "$t(token_operation$withdraw)",
-    "token_staking$stake": "<user>{{user}}</user> staked <bold>{{symbol}}</bold>",
-    "token_staking$claim": "<user>{{user}}</user> claimed <bold>{{symbol}}</bold>",
-    "token_staking$unstake": "<user>{{user}}</user> unstaked <bold>{{symbol}}</bold>",
-    "token_approval$approve": "<user>{{user}}</user> approved <asset>{{- amount}} {{symbol}}</asset> to <contract>{{contract}}</contract>",
-    "token_approval$revoke": "<user>{{user}}</user> revoked the approval of <asset>{{- amount}} {{symbol}}</asset> to <contract>{{contract}}</contract>",
-    "token_approval_verbose$revoke": "<bold>{{user}}</bold> revoked the approval of <bold>{{- amount}} {{symbol}}</bold>",
+    "tokenOperation$mint": "<to>{{to}}</to> minted <bold>{{value}} {{symbol}}</bold>",
+    "tokenOperation$send": "<from>{{from}}</from> sent <asset>{{asset}}</asset> to <to>{{to}}</to>",
+    "tokenOperation$claim": "<to>{{to}}</to> claimed from <from>{{from}}</from>",
+    "tokenOperation$burn": "<from>{{from}}</from> burned <bold>{{value}} {{symbol}}</bold>",
+    "tokenOperation$deposit": "<from>{{from}}</from> deposited on <bold>{{exchange}}</bold>",
+    "tokenOperation$withdraw": "<from>{{from}}</from> withdrew on <bold>{{exchange}}</bold>",
+    "tokenOperation_verbose$mint": "$t(token_operation$mint)",
+    "tokenOperation_verbose$send": "<from>{{from}}</from> sent to <to>{{to}}</to> for <bold>{{value}} {{symbol}}</bold>",
+    "tokenOperation_verbose$claim": "<to>{{to}}</to> claimed from <from>{{from}}</from> for <bold>{{value}} {{symbol}}</bold>",
+    "tokenOperation_verbose$burn": "$t(token_operation$burn)",
+    "tokenOperation_verbose$deposit": "$t(token_operation$deposit)",
+    "tokenOperation_verbose$withdraw": "$t(token_operation$withdraw)",
+    "tokenStaking$stake": "<user>{{user}}</user> staked <bold>{{symbol}}</bold>",
+    "tokenStaking$claim": "<user>{{user}}</user> claimed <bold>{{symbol}}</bold>",
+    "tokenStaking$unstake": "<user>{{user}}</user> unstaked <bold>{{symbol}}</bold>",
+    "tokenApproval$approve": "<user>{{user}}</user> approved <asset>{{- amount}} {{symbol}}</asset> to <contract>{{contract}}</contract>",
+    "tokenApproval$revoke": "<user>{{user}}</user> revoked the approval of <asset>{{- amount}} {{symbol}}</asset> to <contract>{{contract}}</contract>",
+    "tokenApproval_verbose$revoke": "<bold>{{user}}</bold> revoked the approval of <bold>{{- amount}} {{symbol}}</bold>",
     "collectible_approval$approve": "<bold>{{user}}</bold> approved {{collection}} to <bold>{{contract}}</bold>",
     "collectible_approval$revoke": "<bold>{{user}}</bold> revoked the approval of {{collection}} to <bold>{{contract}}</bold>",
     "liquidity$supply": "<user>{{user}}</user> supplied liquidity on <platform>{{platform}}</platform>",
@@ -27,9 +27,8 @@
     "liquidity$remove": "<user>{{user}}</user> removed liquidity on <platform>{{platform}}</platform>",
     "liquidity$borrow": "<user>{{user}}</user> borrowed liquidity on <platform>{{platform}}</platform>",
     "token_value": "{{- value}} {{- symbol}}",
-    "token_swap": "<user>{{user}}</user> swapped <bold>{{- from_value}} {{from_symbol}}</bold> to <bold>{{- to_value}} {{to_symbol}}</bold> on <platform>{{platform}}</platform>",
-    "token_swap_pair": "{{- from_value}} {{from_symbol}} for {{- to_value}} {{to_symbol}}",
-    "token_bridge": "<user>{{user}}</user> bridged <bold>{{- amount}} {{symbol}}</bold> from <platform>{{source}}</platform> to <platform>{{target}}</platform>",
+    "tokenSwap": "<user>{{user}}</user> swapped <bold>{{- from_value}} {{from_symbol}}</bold> to <bold>{{- to_value}} {{to_symbol}}</bold> on <platform>{{platform}}</platform>",
+    "tokenBridge": "<user>{{user}}</user> bridged <bold>{{- amount}} {{symbol}}</bold> from <platform>{{source}}</platform> to <platform>{{target}}</platform>",
     "collectible_register_ens": "<user>{{user}}</user> registered <ens>{{ens}}</ens> for <cost>{{cost_value}} {{cost_symbol}}</cost>",
     "collectible_mint$cost": "<user>{{user}}</user> minted <collectible>{{collectible}}</collectible> for <cost>{{cost_value}} {{cost_symbol}}</cost>",
     "collectible_mint$no_cost": "<user>{{user}}</user> minted <collectible>{{collectible}}</collectible>",
